--- a/src/styles/destination.scss
+++ b/src/styles/destination.scss
@@ -1,6 +1,9 @@
 .destination-main {
   grid-column: 1/2;
   grid-row: 2/3;
+  background: url("../assets/destination/background-destination-mobile.jpg")
+    repeat center;
+  background-size: cover;
   animation: transitionIn 700ms;
   .destination-container {
     width: 80%;
@@ -10,9 +13,12 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 50px;
+    gap: 30px;
+    // PADDDINGGG TRYINGGGG
+    box-sizing: border-box;
+    padding: 20px 0;
     h2 {
       font-family: "Barlow Condensed";
       font-size: 16px;
